tests/baselines/reference/isLiteral2.errors.txt
error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
isLiteral2.ts(1,17): error TS1121: Octal literals are not allowed. Use the syntax '0o2343'.


!!! error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== isLiteral2.ts (1 errors) ====
    var x: number = 02343
                    ~~~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o2343'.